--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div id="home" class="text-center">
-  <div id="home_banner" class="flex-column justify-content-center align-items-center">
+  <!-- <div id="home_banner" class="flex-column justify-content-center align-items-center">
     <div id="baner_div" style="padding: 12rem 3rem;">
         <h1 class="text-white py-3"><label class="text-warning">Fortis</label>Bank</h1>
         <p class=""style="padding:0 1rem;">
@@ -10,9 +10,9 @@
     <label>
         <i class="fa-solid fa-down-long fa-bounce fa-2xl" style="color: #ffffff;"></i>
     </label>
-  </div>
+  </div> -->
   <app-header></app-header>
-  <div style="height: 32.6rem;padding-top: 6rem;">
+  <div style="height: 100vh;padding-top: 6rem;">
     <div>
         <h5>Hii</h5>
         <h3>Enjoy Your Dealing with <label class="text-warning">Fortis</label><label text-secondary>Bank</label></h3>
