--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,15 +9,15 @@
                 <label class="pb-3"><h1>Login</h1></label>
                 <ul>
                     <li><label for="username">UserName</label></li>
-                    <li><input type="text" id="username" placeholder="UserName"></li>
+                    <li><input type="text" id="username" placeholder="UserName" name="uloginname"></li>
                 </ul>
                 <ul>
                     <li><label for="accountnumber">Account Number</label></li>
-                    <li><input type="text" id="accountnumber" placeholder="Account Number"></li>
+                    <li><input type="text" id="accountnumber" placeholder="Account Number" name="uloginAccount"></li>
                 </ul>
                 <ul>
                     <li><label for="password">Password</label></li>
-                    <li><input type="password" id="password" placeholder="Password"></li>
+                    <li><input type="password" id="password" placeholder="Password" name="uloginpassword"></li>
                     <li><Label><i><a href="#">Create new Account</a></i></Label></li>
                 </ul>
                 <button id="loginbtn" type="submit" class="btn-outline-light">Login</button>  
