--- a/src/app/sinup/sinup.component.html
+++ b/src/app/sinup/sinup.component.html
@@ -4,15 +4,15 @@
             <h1 class="my-4"><label>SignUp</label></h1>
             <ul>
                 <li><label for="username">UserName</label></li>
-                <li><input type="text" placeholder="UserName" class="w-75 px-3" id="username"></li>
+                <li><input type="text" placeholder="UserName" class="w-75 px-3" id="username" name="uname"></li>
             </ul>
             <ul>
                 <li><label for="age">Age</label></li>
-                <li><input type="text" placeholder="Age" class="w-75 px-3" id="age"></li>
+                <li><input type="text" placeholder="Age" class="w-75 px-3" id="age" name="uage"></li>
             </ul>
             <ul>
                 <li><label for="pnumber">Phone number</label></li>
-                <li><input type="text" placeholder="Phone number" class="w-75 px-3" id="pnumber"></li>
+                <li><input type="text" placeholder="Phone number" class="w-75 px-3" id="pnumber" name="unum"></li>
             </ul>
             <ul>
                 <div class="row"><li><label for="gender">Gender</label></li>
@@ -22,15 +22,15 @@
             </ul>
             <ul>
                 <li><label for="email">Email</label></li>
-                <li><input type="text" placeholder="Email" class="w-75 px-3" id="email"></li>
+                <li><input type="text" placeholder="Email" class="w-75 px-3" id="email" name="uemail"></li>
             </ul>
             <ul>
                 <li><label for="password">Password</label></li>
-                <li><input type="text" placeholder="Password" class="w-75 px-3" id="password"></li>
+                <li><input type="text" placeholder="Password" class="w-75 px-3" id="password" name="upassword"></li>
             </ul>
             <ul>
                 <li><label for="conpassword">Conform Password</label></li>
-                <li><input type="text" placeholder="Conform Password" class="w-75 px-3" id="conpassword"></li>
+                <li><input type="text" placeholder="Conform Password" class="w-75 px-3" id="conpassword" name="ucpassword"></li>
             </ul>
             <button type="submit" class="btn btn-success w-25 mt-2"><i class="fa-brands fa-gg-circle fa-flip fa-2xl mx-3"></i></button>
         </form>
