--- a/src/app/accountstatement/accountstatement.component.css
+++ b/src/app/accountstatement/accountstatement.component.css
@@ -1,3 +1,16 @@
 #statement{
     height: 100vh;
 }
+/* #statement-table{
+    height: 100px;
+    overflow:scroll;
+} */
+table{
+    max-height: 59vh;
+}
+@media screen and (max-width:991px){
+#caro{
+    display: none;
+}
+
+}
