--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,8 +15,8 @@
     </div>
 </nav> -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <h2 class="px-5"><i class="fa-brands fa-gg-circle fa-flip fa-lg mx-3"></i><label class="text-warning">Fortis</label> Bank</h2>
+    <div class="container-fluid" id="logosection">
+        <a style="cursor: pointer;"><h2 class="px-5"><i class="fa-brands fa-gg-circle fa-flip fa-lg mx-3"></i><label class="text-warning"style="cursor: pointer;">Fortis</label> Bank</h2></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,26 +24,26 @@
     <div class="collapse navbar-collapse mx-5" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <button class="btn" >Home <i class="bi bi-house-check-fill text-success" id="icon1"></i></button>
+            <button (click)="home()" class="btn" >Home <i class="bi bi-house-check-fill text-success" id="icon1"></i></button>
           </li>
           <li class="nav-item">
-            <button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">ViewProfile <i class="bi bi-person-check text-primary" id="icon2"></i></button>
+            <button class="btn" (click)="profile()" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">ViewProfile <i class="bi bi-person-check text-primary" id="icon2"></i></button>
           </li>
           <li class="nav-item">
-            <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">BalanceEnquiry <i class="bi bi-wallet text-primary"  id="icon3"></i></button>
+            <button class="btn" (click)="balance()" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">BalanceEnquiry <i class="bi bi-wallet text-primary"  id="icon3"></i></button>
           </li>
           <li class="nav-item">
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#moneytransfer">MoneyTransfer <i class="fa-brands fa-bitcoin text-primary" id="icon4"></i></button>
+            <button type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#moneytransfer">MoneyTransfer <i class="fa-brands fa-bitcoin text-primary" id="icon4"></i></button>
           </li>
           <li class="nav-item">
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#accountstatement">AccountStatement <i class="fa-solid fa-file-invoice-dollar text-primary"  id="icon5"></i></button>
+            <button type="button" (click)="accountstatement()" class="btn" data-bs-toggle="modal" data-bs-target="#accountstatement">AccountStatement <i class="fa-solid fa-file-invoice-dollar text-primary"  id="icon5"></i></button>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">DeleteAccount <i class="bi bi-person-fill-dash text-primary"  id="icon6"></i></a>
+            <button type="button" class="btn" >DeleteAccount<i class="bi bi-person-fill-dash text-primary" id="icon6"></i></button> 
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">LogOut <i class="fa-solid fa-person-walking-dashed-line-arrow-right text-danger"  id="icon7"></i></a>
-          </li>
+            <!-- <a class="nav-link" routerLink="" >LogOut <i class="fa-solid fa-person-walking-dashed-line-arrow-right text-danger"  id="icon7"></i></a>          </li> -->
+            <button class="btn" (click)="logout()" >LogOut <i class="fa-solid fa-person-walking-dashed-line-arrow-right text-danger"  id="icon7"></i></button>
         </ul>
     </div>
   </nav>
@@ -59,8 +59,8 @@
             <h3>Profile Details</h3>
             <img src="https://i.postimg.cc/zXzcQQFV/pngwing-com-2.png" alt="..." width="120px" height="120px">
             <div class="row">
-              <label class="col">UserName:</label>
-              <label class="col">Account Number:</label>
+              <label class="col">UserName:{{profileData.uname}} </label>
+              <label class="col">Account Number: {{profileData.acno}}</label>
             </div>
           </form>
         </div>
@@ -80,9 +80,9 @@
         <img src="https://i.postimg.cc/3J7KtwcS/pngtree-cartoon-bank-payment-element-image-2281036.png" alt="..." width="300px" hight="300px">
       </div>
       <div>
-        hii "username"
-        <h3>Your Account Number is "1234569777"</h3>
-        <h4>Account Balance:-<label>1000000000</label></h4>
+        hii "{{balanceData.uname}}"
+        <h3>Your Account Number is "{{balanceData.acno}}"</h3>
+        <h4>Account Balance:-{{balanceData.balance}}<label></label></h4>
       </div>
     </div>
   </div>
@@ -95,13 +95,22 @@
         </div>
         <div id="transfer" class="modal-body ">
             <img class="my-4" src="https://i.postimg.cc/mk1CpCgL/pngwing-com-3.png" alt="..." width="100px" height="100px"/>
-            <input class="w-75"  type="text" name="tranferAccountnumber" placeholder="Recipient Account Number" id="tcnum">
-            <input class="w-75" type="text" name="Amount" placeholder="Amount to Transfer" id="tamount">
-            <button type="button" class="btn btn-success w-75">Transfer</button>
+            <form action="" [formGroup]="formMoneyTransfer">
+            <input formControlName="toAcno" class="w-75"  type="text" name="tranferAccountnumber" placeholder="Recipient Account Number" id="tcnum">
+            <label classs="text-center" *ngIf="formMoneyTransfer.get('formAcno')?.errors&&formMoneyTransfer.get('formAcno')?.touched">Accept Numbers only</label>
+            <input formControlName="amount" class="w-75" type="text" name="Amount" placeholder="Amount to Transfer" id="tamount">
+            <label classs="text-center" *ngIf="formMoneyTransfer.get('amount')?.errors&&formMoneyTransfer.get('amount')?.touched">Accept Numbers only</label>
+            <input formControlName="psw" class="w-75" type="password" name="password" placeholder="password" id="pswd">
+            <label classs="text-center" *ngIf="formMoneyTransfer.get('psw')?.errors&&formMoneyTransfer.get('psw')?.touched">Accept Numbers and password only</label>
+            <button (click)="MTranser()" type="button" class="btn btn-success w-75">Transfer</button>
+          </form>
         </div>
-        <div class="modal-footer my-4">
+        <div class="modal-footer my-4 text-center">
+          <p class="text-center" [ngClass]="status?'s2':'s1'">{{message}}</p>
         </div>
       </div>
     </div>
   </div>
+  
+  
   
