--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,13 +11,109 @@
         <i class="fa-solid fa-down-long fa-bounce fa-2xl" style="color: #ffffff;"></i>
     </label>
   </div> -->
-  <app-header></app-header>
-  <div style="height: 100vh;padding-top: 6rem;">
-    <div>
-        <h5>Hii</h5>
-        <h3>Enjoy Your Dealing with <label class="text-warning">Fortis</label><label text-secondary>Bank</label></h3>
-        <img src="https://i.postimg.cc/WbLZMc5Q/pngwing-com-1.png" alt="no image" width="200px" height="200px"/>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid" id="logosection">
+        <a style="cursor: pointer;"><h2 class="px-5"><i class="fa-brands fa-gg-circle fa-flip fa-lg mx-3"></i><label class="text-warning"style="cursor: pointer;">Fortis</label> Bank</h2></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
     </div>
+    <div class="collapse navbar-collapse mx-5" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <button (click)="home()" class="btn" >Home <i class="bi bi-house-check-fill text-success" id="icon1"></i></button>
+          </li>
+          <li class="nav-item">
+            <button class="btn" (click)="profile()" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">ViewProfile <i class="bi bi-person-check text-primary" id="icon2"></i></button>
+          </li>
+          <li class="nav-item">
+            <button class="btn" (click)="balance()" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">BalanceEnquiry <i class="bi bi-wallet text-primary"  id="icon3"></i></button>
+          </li>
+          <li class="nav-item">
+            <button type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#moneytransfer">MoneyTransfer <i class="fa-brands fa-bitcoin text-primary" id="icon4"></i></button>
+          </li>
+          <li class="nav-item">
+            <button type="button" (click)="accountstatement()" class="btn" data-bs-toggle="modal" data-bs-target="#accountstatement">AccountStatement <i class="fa-solid fa-file-invoice-dollar text-primary"  id="icon5"></i></button>
+          </li>
+          <li class="nav-item">
+            <button type="button" (click)="deleteAcno()" class="btn" >DeleteAccount<i class="bi bi-person-fill-dash text-primary" id="icon6"></i></button> 
+          </li>
+          <li class="nav-item">
+            <button class="btn" (click)="logout()" >LogOut <i class="fa-solid fa-person-walking-dashed-line-arrow-right text-danger"  id="icon7"></i></button>
+        </ul>
+    </div>
+  </nav>
+  <div style="height: 100vh;padding-top: 6rem;">
+    <div [ngClass]="sheareAcno?'c':''">
+        <h5>Hii {{user}}</h5>
+        <h3>{{data}} <label class="text-warning">Fortis</label><label text-secondary>Bank</label></h3>
+        <img src="https://i.postimg.cc/WbLZMc5Q/pngwing-com-1.png" alt="no image" width="200px" height="200px"/> 
+    </div>
+    <app-delete (onDelete)="AccountDelete($event)" (onCancel)="cancel()" [ChildAcno]="sheareAcno"></app-delete>
   </div>
   <app-footer></app-footer>
+</div>
+<div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form class="text-center">
+          <h3>Profile Details</h3>
+          <img src="https://i.postimg.cc/zXzcQQFV/pngwing-com-2.png" alt="..." width="120px" height="120px">
+          <div class="row">
+            <label class="col">UserName:{{profileData.uname}} </label>
+            <label class="col">Account Number: {{profileData.acno}}</label>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer mb-3">
+        <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+<div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+  <div class="offcanvas-header">
+    <h1 class="modal-title fs-5" id="exampleModalLabel">BalanceEnquiry</h1>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div>
+      <img src="https://i.postimg.cc/3J7KtwcS/pngtree-cartoon-bank-payment-element-image-2281036.png" alt="..." width="300px" hight="300px">
+    </div>
+    <div>
+      hii "{{balanceData.uname}}"
+      <h3>Your Account Number is "{{balanceData.acno}}"</h3>
+      <h4>Account Balance:-{{balanceData.balance}}<label></label></h4>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="moneytransfer" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Money Transfer</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div id="transfer" class="text-center modal-body">
+          <img class="my-4" src="https://i.postimg.cc/mk1CpCgL/pngwing-com-3.png" alt="..." width="100px" height="100px"/>
+          <form action="" [formGroup]="formMoneyTransfer">
+          <input formControlName="toAcno" class="w-75"  type="text" name="tranferAccountnumber" placeholder="Recipient Account Number" id="tcnum">
+          <label classs="text-center" *ngIf="formMoneyTransfer.get('toAcno')?.errors&&formMoneyTransfer.get('toAcno')?.touched">Accept Numbers only</label>
+          <input formControlName="amount" class="w-75" type="text" name="Amount" placeholder="Amount to Transfer" id="tamount">
+          <label classs="text-center" *ngIf="formMoneyTransfer.get('amount')?.errors&&formMoneyTransfer.get('amount')?.touched">Accept Numbers only</label>
+          <input formControlName="psw" class="w-75" type="password" name="password" placeholder="password" id="pswd">
+          <label classs="text-center" *ngIf="formMoneyTransfer.get('psw')?.errors&&formMoneyTransfer.get('psw')?.touched">Accept Numbers and password only</label>
+          <button (click)="MTranser()" type="button" class="btn btn-success w-75">Transfer</button>
+        </form>
+      </div>
+      <div class="modal-footer my-4 text-center">
+        <p class="text-center" [ngClass]="status?'s2':'s1'">{{message}}</p>
+      </div>
+    </div>
+  </div>
 </div>
